--- a/snack-2/index.html
+++ b/snack-2/index.html
@@ -7,7 +7,7 @@
     <title>Snack 2</title>
 </head>
 
-<body style="background-color: darkslategray;"> <!--da togliere-->
+<body>
     <script src="js/main.js"></script>
 </body>
 
